src/css/main.css
/* 1. General */
body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

h1 {
  font-size: 3em;
  color: white;
}

.flex-row {
  display: flex;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-item {
  flex: 1;
}

.action-button {
  background-color: transparent;
  border: 1px solid white;
  color: white;
  padding: 0.8em 1.5em;
}

/* 2. HUD */

.hud {
  height: 100vh;
  left: 0;
  overflow: hidden;
  position: fixed;
  top: 0;
  width: 100vw;
  pointer-events: none;
}

.hud__element {
  position: absolute;
  pointer-events: auto;
}

/* 2.1. HUD Title */
.title {
  display: flex;
  left: 40px;
  top: 50px;
}

.title__logo {
  margin-right: 15px;
  transform: rotate(-17deg);
}

.title__text {
  color: white;
  font-family: verdana;
  font-size: 2.5em;
  font-variant: small-caps;
  line-height: 1.2;
}

/* 2.2. HUD Menu*/
.menu {
  right: 40px;
  top: 40px;
}

.menu__container {
  background-color: white;
  bottom: 0;
  padding: 40px;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 5;
}

.menu__top-controls {
  text-align: right;
}

.menu__close-btn {
  background-color: transparent;
  border: 0;
  font-size: 2em;
  font-weight: bold;
}

.menu__navigation {
  color: #231322;
  font-size: 2.3em;
  list-style-type: none;
  margin-top: 0;
  padding-left: 0;
}

.menu__navigation > li {
  border-bottom: 1px solid #ccc;
  padding: 0.4em 0 0.3em 0;
}

.menu__navigation > li:last-child {
  border-bottom: 0;
}

/* 2.3. HUD Controls */
.controls {
  bottom: 35px;
  left: 30px;
}

.controls > div:not(:last-child) {
  margin-bottom: 5px;
}

.controls__image--down {
  transform: rotate(180deg);
}

/* 2.4. HUD Page Index */
.index {
  align-items: center;
  bottom: 40px;
  display: flex;
  flex-direction: column;
  right: 40px;
}

.index__number {
  color: #aaa;
  cursor: pointer;
  font-family: Verdana;
  margin: 10px 0;
  padding-right: 4px;
}

.index__number.active {
  border-right: 4px solid #EBBA07;
  color: white;
  font-size: 1.2em;
}

/* 3. Site Content */

.content {
  background-color: #ccc;
  border: 1px solid transparent;
  box-sizing: border-box;
  min-height: 100vh;
}

.page {
  height: 100vh;
  /* border: 1px solid firebrick; */
}

.page:nth-child(odd) {
  background-color: #efbac9;
}

.content__container {
}

.content__container.left {
  margin: 250px 0 0 100px;
}

.content__container.right {
  margin: 250px 100px 0 0;
}

/* 3.1. Awards */
.awards__container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.awards__item {
  position: relative;
  width: 100px;
  color: white;
  text-align: center;
}

.awards__item::before {
  content: '';
  background-image: url(../assets/laurier.svg);
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  right: 100%;
  width: 30px;
  height: 60px;
}

.awards__item::after {
  content: '';
  background-image: url(../assets/laurier.svg);
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  left: 100%;
  width: 30px;
  height: 60px;
  transform: rotateY(180deg);
}

.awards__name {
  padding-bottom: 20px;
}

